actions/handlebuttonevents: Require lid-open again to track kb brightness

Out of the two checks in this line that were removed in
commit d0b43050, one should have remained. We still need to make
storing the old keyboard brightness conditional on an opened lid,
otherwise restoring keyboard brightness can fail after closing and
re-opening the lid.

BUG: 482306
FIXED-IN: 6.0.4